<resources>
    <string name="app_name">MyOUC</string>
    <!--登录界面-->
    <string name="login_text">用户登录</string>
    <string name="checkbox_text">记住密码</string>
    <string name="username_text1">学 号:</string>
    <string name="input_user_text1">请输入您的学号</string>
    <string name="password_text1">密 码:</string>
    <string name="input_password_text1">请输入您的密码</string>
    <string name="register_button1">注册</string>
    <string name="login_button">登录</string>
    <!--注册界面-->
    <string name="register_text">用户注册</string>
    <string name="username_text2">学   号:</string>
    <string name="input_user_text2">请输入您的学号</string>
    <string name="password_text2">密   码:</string>
    <string name="input_password_text2">请输入您的密码</string>
    <string name="password_text3">确认密码:</string>
    <string name="input_password_text3">请确认您的密码</string>
    <string name="register_button2">确认</string>
    <string name="cancel_button">取消</string>
    <!--其他-->
    <string name="register_message">注册成功!</string>
    <string name="surface2_message">不能为空!</string>
    <string name="press_login_button1">欢迎登录！</string>
    <string name="press_login_button2">登录失败！</string>
    <string name="press_register_button">欢迎注册！</string>
    <string name="message1">账号或者密码不能为空</string>
    <string name="message2">保存成功</string>
</resources>
