<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg1"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/login_text"
        android:textSize="40dp"
        tools:layout_marginTop="100dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

        <EditText
            android:id="@+id/input_user_text1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:hint="@string/input_user_text1"
            android:maxLines="1"
            android:textSize="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_lock_idle_lock" />

        <EditText
            android:id="@+id/input_password_text2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/input_password_text1"
            android:maxLines="1"
            android:textSize="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:checked="true"
            android:orientation="vertical"
            android:text="@string/checkbox_text"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="#99000000"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/register_button1"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="#80000000"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

    </LinearLayout>

</LinearLayout>
